[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/FredokaOne/FredokaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/card/rounded_edges.shader" type="Shader" id=2]
[ext_resource path="res://game/card/local_images/alma_de_gato.png" type="Texture" id=3]
[ext_resource path="res://game/card/card.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 2 )
shader_param/radius = 1.0
shader_param/animate = false
shader_param/square_scale = 0.1

[sub_resource type="DynamicFont" id=6]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="CardButton" type="TextureButton"]
material = SubResource( 5 )
anchor_right = 0.119792
anchor_bottom = 0.212963
margin_bottom = -1.52588e-05
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 0.905
margin_bottom = -0.400024
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "#"
align = 1
valign = 2
autowrap = true

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_CardButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CardButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_CardButton_pressed"]
